# -qi-wu-bo-yan

./: .env.example  .gitignore  artifact_descriptions.json
.github/workflows/: ci.yml  deploy.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: artifacts.py  images.py  kg.py  rag.py  reconstruct.py  stories.py
backend/app/core/: config.py  database.py  logging_config.py
backend/app/services/: __init__.py  gemma_service.py  hunyuan3d_service.py  kg_service.py  rag_inference.py  rag_service.py
configs/: distill.yaml  train_bo_yan.yaml  train_dpo.yaml  train_gemma.yaml  train_hunyuan3d.yaml
dataset/: README.md  museum_relics.json  sample_artifacts.json
docker/: .env.docker  backend.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile  nginx.conf
docs/api/: openapi.yaml
docs/design/: architecture.md
docs/manual/: deployment.md  (+2 more)
frontend/: .eslintrc.cjs  index.html  nginx-spa.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: MuseumExpert  archive_data.py  augment_data.py  convert_museum_to_preference.py  convert_to_dpo.py  create_museum_modelfile.py  distill_knowledge.py  download_model.py  fetch_met_museum.py  generate_test_data.py  import_artifacts.py  import_evaluation_artifacts.py  init_db.py  init_services.py  install_hunyuan3d.sh  migrate.py  prepare_training_data.py  process_images.py  train_dpo.py  train_gemma.py  train_hunyuan3d.py
(+31 files in other folders)
